# arxiv-sanity

./: .gitignore  README.md  fetcher.py  model.py  pyproject.toml  schema.sql  server.py
static/: main.css  main.js
templates/: index.html
