[tool.poetry]
name = "arxiv-sanity"
version = "0.1.0"
description = ""
authors = ["Kim Seonghyeon <kim.seonghyeon@navercorp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.10"
gensim = "^3.7"
feedparser = "^5.2"
starlette = "^0.12.13"
aiofiles = "^0.4.0"
uvicorn = "^0.10.4"
peewee = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
